chore: add posgres db

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -131,3 +131,16 @@ services:
       retries: 3
     networks:
       - confluent
+
+  postgres:
+    image: postgres:14.0
+    environment:
+      - POSTGRES_USER=airflow
+      - POSTGRES_PASSWORD=airflow
+      - POSTGRES_DB=airflow
+    logging:
+      options:
+        max-size: 10m
+        max-file: "3"
+    networks:
+      - confluent
